tests/rosetta/out/Swift/associative-array-merging.error
run error: exit status 1
/tmp/TestMochiToSwiftassociative-array-merging2664838193/001/main.swift:2:32: error: expected dictionary value type
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:07Z
 2 | func merge(_ base: [String: any], _ update: [String: any]) -> [String: any] {
   |                                `- error: expected dictionary value type
 3 |     var result: [String: any] = []
 4 |     for k in base {

/tmp/TestMochiToSwiftassociative-array-merging2664838193/001/main.swift:2:57: error: expected dictionary value type
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:07Z
 2 | func merge(_ base: [String: any], _ update: [String: any]) -> [String: any] {
   |                                                         `- error: expected dictionary value type
 3 |     var result: [String: any] = []
 4 |     for k in base {

/tmp/TestMochiToSwiftassociative-array-merging2664838193/001/main.swift:2:75: error: expected dictionary value type
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:07Z
 2 | func merge(_ base: [String: any], _ update: [String: any]) -> [String: any] {
   |                                                                           `- error: expected dictionary value type
 3 |     var result: [String: any] = []
 4 |     for k in base {

/tmp/TestMochiToSwiftassociative-array-merging2664838193/001/main.swift:3:29: error: expected dictionary value type
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:07Z
 2 | func merge(_ base: [String: any], _ update: [String: any]) -> [String: any] {
 3 |     var result: [String: any] = []
   |                             `- error: expected dictionary value type
 4 |     for k in base {
 5 |         result[k] = base[k]

/tmp/TestMochiToSwiftassociative-array-merging2664838193/001/main.swift:13:27: error: expected dictionary value type
11 | }
12 | func main() {
13 |     let base: [String: any] = ["name": "Rocket Skates", "price": 12.75, "color": "yellow"]
   |                           `- error: expected dictionary value type
14 |     let update: [String: any] = ["price": 15.25, "color": "red", "year": 1974]
15 |     let result = merge(base, update)

/tmp/TestMochiToSwiftassociative-array-merging2664838193/001/main.swift:14:29: error: expected dictionary value type
12 | func main() {
13 |     let base: [String: any] = ["name": "Rocket Skates", "price": 12.75, "color": "yellow"]
14 |     let update: [String: any] = ["price": 15.25, "color": "red", "year": 1974]
   |                             `- error: expected dictionary value type
15 |     let result = merge(base, update)
16 |     print(result)
