tests/rosetta/out/Swift/associative-array-merging.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:07Z
func merge(_ base: [String: any], _ update: [String: any]) -> [String: any] {
    var result: [String: any] = []
    for k in base {
        result[k] = base[k]
    }
    for k in update {
        result[k] = update[k]
    }
    return result
}
func main() {
    let base: [String: any] = ["name": "Rocket Skates", "price": 12.75, "color": "yellow"]
    let update: [String: any] = ["price": 15.25, "color": "red", "year": 1974]
    let result = merge(base, update)
    print(result)
}
main()
